@@ -2,11 +2,15 @@ package com.lucasnorgaard.tstudioservice;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
+import com.google.gson.reflect.TypeToken;
+import com.lucasnorgaard.tstudioservice.models.Language;
 import org.kohsuke.github.GHContent;
 import org.kohsuke.github.GHRepository;
 import org.kohsuke.github.GitHub;
+import org.yaml.snakeyaml.Yaml;
 
 import java.io.IOException;
+import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.List;
@@ -23,8 +27,7 @@ public class Helpers {
             GHRepository repository = gitHub.getRepository("DeprecatedLuxas/tstudio-presets");
             List<GHContent> contents = repository.getDirectoryContent("presets")
                     .stream()
-                    .filter(f -> f.getName().contains(".tstudio-preset"))
-                    .collect(Collectors.toList());
+                    .filter(f -> f.getName().contains(".tstudio-preset")).toList();
 
 
             for (GHContent content : contents) {
@@ -42,5 +45,26 @@ public class Helpers {
         }
 
         return presets;
+    }
+
+    public Map<String, Language> getLanguages() {
+        System.out.println("Fetching Languages");
+        Map<String, Language> languages = new HashMap<>();
+
+        try {
+            GHRepository repo = Application.getGitHub().getRepository("github/linguist");
+            GHContent content = repo.getFileContent("lib/linguist/languages.yml");
+            Yaml yaml = new Yaml();
+            Gson gson = new Gson();
+            Type langMapType = new TypeToken<Map<String, Language>>() {
+            }.getType();
+            Object json = yaml.loadAs(content.read(), Object.class);
+
+            languages = gson.fromJson(gson.toJson(json), langMapType);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        System.out.println("Updated Languages");
+        return languages;
     }
 }
